--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -1,16 +1,25 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" href="{% static 'css/base.css' %}" media="screen" rel ="stylesheet"/>
+    <link type="text/css" href="{% static 'css/base.css' %}" rel ="stylesheet"/>
     <title>Earthlove</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1755/1755423.png">
 </head>
 
-<body id="bp" style="background-image: url('{%static 'img/fondo1.jpg' %}')">
+<body class="background">
+    <style>
+        .background{
+            background-image: url('/static/img/fondo1.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -98,7 +107,7 @@
             </div>
         </div>
     </nav> 
-    {% block content %}
-    {% endblock %}
 </body>
 </html>
+{% block content %}
+{% endblock %}
