--- a/homeapp/templates/inicio.html
+++ b/homeapp/templates/inicio.html
@@ -24,7 +24,7 @@
         {% endif %}
     </section>
     <br>
-    <a class="btn btn-secondary" href="/mipost/">
+    <a class="btn btn-secondary" href="/misnoticias/">
         Ir a 'Mis noticias'
     </a>
     <br>
