--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -45,7 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/comunidad/">Comunidad de noticias</a>
                         </li>
-                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="/news">Noticias internacionales</a>
+                        </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link" href="/inicio">Tu Perfil</a>
