--- a/homeapp/templates/misnoticias.html
+++ b/homeapp/templates/misnoticias.html
@@ -18,8 +18,7 @@
 <main class="container py-5">
     <section class="card card-body">
         <ul>
-            {{error}}
-            {% if post != None %}
+            {% if post != 'nohay' %}
                 {% for posts in post %}
                     <li>
                         <a href="{% url 'unasola' posts.id %}">
@@ -33,7 +32,9 @@
                         </a>
                     </li>
                 {% endfor %}
+            {% else %}
             {% endif %}
+            {{error}}
         </ul>
     </section>
 </main>
