--- a/homeapp/templates/paisajes.html
+++ b/homeapp/templates/paisajes.html
@@ -46,7 +46,7 @@
                             <h5 class="card-title">Machu Picchu, Perú.</h5>
                             <p class="card-text">Machu Picchu, antigua ciudad inca, se encuentra en los Andes peruanos. Construida en el siglo XV, destaca por su arquitectura y ubicación a 2,430 metros sobre el nivel del mar. Fue redescubierta en 1911 por Hiram Bingham y es Patrimonio de la Humanidad. Su belleza y misterio la convierten en un ícono turístico.</p>
                             <div class="text-center">
-                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/Machu+Picchu,+Per%c3%ba/@-13.16326361,-72.54514858,2448.26953125a,0d,60y,146.95800059h,77.38072601t,0r/data=CigiJgokCeFTHGQWoUxAEUbjw3WF7T1AGQC23kDpSFRAId28c1MBnyxAIhoKFkdnRm9NeloxV3RIOTA1ellQS2ZqUFEQAg" >
+                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/Machu+Picchu,+Per%c3%ba/@-13.16326361,-72.54514858,2448.26953125a,0d,60y,146.95800059h,77.38072601t,0r/data=CigiJgokCeFTHGQWoUxAEUbjw3WF7T1AGQC23kDpSFRAId28c1MBnyxAIhoKFkdnRm9NeloxV3RIOTA1ellQS2ZqUFEQAg" target="_blank" rel="noopener noreferrer">
                                 Vamos ahora
                                 </a>
                             </div>
@@ -62,7 +62,7 @@
                             <h5 class="card-title">Piramides de giza, Egipto.</h5>
                             <p class="card-text">Egipto es un país en el norte de África con una rica historia. En la antigüedad, estaba dividido en dos reinos, Alto y Bajo Egipto, hasta que se unificaron alrededor del 3000 a.C. bajo un gobierno monárquico, absolutista y teocrático. Esta unificación marcó el inicio de una de las civilizaciones más antiguas del mundo.</p>
                             <div class="text-center">
-                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/La+Esfinge,+Al+Giza+Desert,+Egipto/@29.97495636,31.13798941,25.59214211a,0d,60y,283.83965701h,90.24682773t,0r/data=Co0BGmMSXQolMHgxNDU4NGY2MmEzYWVhOTc5OjB4YzlkM2YwYTY0MDY2YmRhORn7T6M1q_k9QCHp_vudNyM_QCoiTGEgRXNmaW5nZSwgQWwgR2l6YSBEZXNlcnQsIEVnaXB0bxgBIAEiJgokCYRgSWZuIjvAERA5OCL6IzvAGRee-zLuUVvAIfNnGjdhUlvAIhoKFkVacHE5VGJBaVlNbkR1ZmVhOGk2eFEQAjoDCgEw" >
+                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/La+Esfinge,+Al+Giza+Desert,+Egipto/@29.97495636,31.13798941,25.59214211a,0d,60y,283.83965701h,90.24682773t,0r/data=Co0BGmMSXQolMHgxNDU4NGY2MmEzYWVhOTc5OjB4YzlkM2YwYTY0MDY2YmRhORn7T6M1q_k9QCHp_vudNyM_QCoiTGEgRXNmaW5nZSwgQWwgR2l6YSBEZXNlcnQsIEVnaXB0bxgBIAEiJgokCYRgSWZuIjvAERA5OCL6IzvAGRee-zLuUVvAIfNnGjdhUlvAIhoKFkVacHE5VGJBaVlNbkR1ZmVhOGk2eFEQAjoDCgEw" target="_blank" rel="noopener noreferrer">
                                 Vamos ahora
                                 </a>
                             </div>
@@ -78,7 +78,7 @@
                             <h5 class="card-title">Gran Barrera de Coral, Australia</h5>
                             <p class="card-text">La Gran Barrera de Coral, en Australia, es el arrecife más grande del mundo, abarcando más de 2,300 km. Con una rica biodiversidad marina, enfrenta amenazas como el blanqueo de corales por el cambio climático. Designada Patrimonio de la Humanidad, es un destino clave para el buceo y la conservación marina.</p>
                             <div class="text-center">
-                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/lom+cerca+de+Gran+Barrera+de+Coral,+Australia/@-14.91983323,145.70083617,1.99331643a,0d,60y,190.14663001h,69.98632591t,0r/data=CpgBGm4SaAolMHg2YmRmMTQ0NjgyMmM3MTNiOjB4MTkyYTU3NDEzNjgzM2NkYRlyxLU1fUkywCE0VHvHX3ZiQCotbG9tIGNlcmNhIGRlIEdyYW4gQmFycmVyYSBkZSBDb3JhbCwgQXVzdHJhbGlhGAEgASImCiQJoM6M1HqDNUARos6M1HqDNcAZseuRJhHnSUAhreuRJhHnScAiMAosQUYxUWlwTlRRa2dQWmhJSzRVOVZfd1ZNNVRHRkhVSUJQeWlCbWd4R0IyWWkQBToDCgEw" >
+                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/lom+cerca+de+Gran+Barrera+de+Coral,+Australia/@-14.91983323,145.70083617,1.99331643a,0d,60y,190.14663001h,69.98632591t,0r/data=CpgBGm4SaAolMHg2YmRmMTQ0NjgyMmM3MTNiOjB4MTkyYTU3NDEzNjgzM2NkYRlyxLU1fUkywCE0VHvHX3ZiQCotbG9tIGNlcmNhIGRlIEdyYW4gQmFycmVyYSBkZSBDb3JhbCwgQXVzdHJhbGlhGAEgASImCiQJoM6M1HqDNUARos6M1HqDNcAZseuRJhHnSUAhreuRJhHnScAiMAosQUYxUWlwTlRRa2dQWmhJSzRVOVZfd1ZNNVRHRkhVSUJQeWlCbWd4R0IyWWkQBToDCgEw" target="_blank" rel="noopener noreferrer">
                                 Vamos ahora
                                 </a>
                             </div>
@@ -94,7 +94,7 @@
                             <h5 class="card-title">Mont Blanc, Francia.</h5>
                             <p class="card-text">Mont Blanc, la cumbre más alta de los Alpes con 4,808 metros, se encuentra en la frontera de Francia e Italia. Reconocido por desafiantes rutas de ascenso, atrae a alpinistas. Con impresionantes glaciares y paisajes alpinos, es un destino emblemático que ofrece actividades recreativas en sus alrededores.</p>
                             <div class="text-center">
-                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/Mont+Blanc+monta%c3%b1a/@45.83259891,6.86379405,4781.08691406a,0d,60y,120.94758413h,83.39982328t,0r/data=Cn4aVBJOCiUweDQ3ODk0NTlmYjUzNGJlNTE6MHhhOTA4NzI4YzVkY2VjNGMwGcw1Fl6T6kZAIcBHs2jwdRtAKhNNb250IEJsYW5jIG1vbnRhw7FhGAEgASImCiQJ1bpZ9SLuQMARf2KDT_7vQMAZd-apWsfmYkAh2GcaaWHmYkAiGgoWNXNSR09wb2Y4LWFMdHdCV2xXNzRoZxACOgMKATA" >
+                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/Mont+Blanc+monta%c3%b1a/@45.83259891,6.86379405,4781.08691406a,0d,60y,120.94758413h,83.39982328t,0r/data=Cn4aVBJOCiUweDQ3ODk0NTlmYjUzNGJlNTE6MHhhOTA4NzI4YzVkY2VjNGMwGcw1Fl6T6kZAIcBHs2jwdRtAKhNNb250IEJsYW5jIG1vbnRhw7FhGAEgASImCiQJ1bpZ9SLuQMARf2KDT_7vQMAZd-apWsfmYkAh2GcaaWHmYkAiGgoWNXNSR09wb2Y4LWFMdHdCV2xXNzRoZxACOgMKATA" target="_blank" rel="noopener noreferrer">
                                 Vamos ahora
                                 </a>
                             </div>
@@ -110,7 +110,7 @@
                             <h5 class="card-title">Camino de Cerezos, Japón.</h5>
                             <p class="card-text">Los parques de cerezos en Tokio, como Ueno y Shinjuku Gyoen, son famosos por el hanami durante la temporada de sakura. Con su entorno pintoresco, son destinos populares para disfrutar de picnics y eventos culturales en primavera. Lo cual lo convierte un destino emblematico.</p>
                             <div class="text-center">
-                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/cerezos+de+tokio/@35.68249413,139.71061463,42.31756415a,0d,60y,327.21813442h,91.75298206t,0r/data=CnsaURJLCiUweDYwMTg4Y2MwNzNhODNlMDM6MHg0ZTM4Mjc5ZjVkMTQ4MmM2GfL8szBV10FAIS32TVC5dmFAKhBjZXJlem9zIGRlIHRva2lvGAEgASImCiQJ5XNOjNLuRkARBOaIplLmRkAZDhE54NidG0Ahd-5iwzpLG0AiGgoWalRoSDBGUlAzVjJUdHZqanVHT3dkURACOgMKATA" >
+                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/cerezos+de+tokio/@35.68249413,139.71061463,42.31756415a,0d,60y,327.21813442h,91.75298206t,0r/data=CnsaURJLCiUweDYwMTg4Y2MwNzNhODNlMDM6MHg0ZTM4Mjc5ZjVkMTQ4MmM2GfL8szBV10FAIS32TVC5dmFAKhBjZXJlem9zIGRlIHRva2lvGAEgASImCiQJ5XNOjNLuRkARBOaIplLmRkAZDhE54NidG0Ahd-5iwzpLG0AiGgoWalRoSDBGUlAzVjJUdHZqanVHT3dkURACOgMKATA" target="_blank" rel="noopener noreferrer">
                                 Vamos ahora
                                 </a>
                             </div>
@@ -127,7 +127,7 @@
                             <p class="card-text">
                                 El Monte Fuji, la montaña más alta de Japón, se eleva a 3,776 metros y destaca por su forma cónica. Considerado sagrado, ha inspirado la cultura y el arte japonés. Su cima nevada y vistas panorámicas atraen a escaladores y turistas, convirtiéndolo en un ícono natural emblemático.</p>
                             <div class="text-center">
-                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/monte+fuji/@35.36076122,138.72751385,3734.51996071a,0d,60y,212.50558992h,103.4538205t,0r/data=CnUaSxJFCiUweDYwMTk2MjlhNDJmZGM4OTk6MHhhNmExZmNjOTE2ZjNhNGRmGURN9PkorkFAIdbpm49GV2FAKgptb250ZSBmdWppGAEgASImCiQJWuxL5g_tJMAR-CtlDhLvJMAZIiyFUMptWkAhGsVge2RtWkAiGgoWWWpyR2RGWnRXR0lzcElLTExWYVhPdxACOgMKATA" >
+                                <a class="btn btn-secondary" href="https://earth.google.com/web/search/monte+fuji/@35.36076122,138.72751385,3734.51996071a,0d,60y,212.50558992h,103.4538205t,0r/data=CnUaSxJFCiUweDYwMTk2MjlhNDJmZGM4OTk6MHhhNmExZmNjOTE2ZjNhNGRmGURN9PkorkFAIdbpm49GV2FAKgptb250ZSBmdWppGAEgASImCiQJWuxL5g_tJMAR-CtlDhLvJMAZIiyFUMptWkAhGsVge2RtWkAiGgoWWWpyR2RGWnRXR0lzcElLTExWYVhPdxACOgMKATA" target="_blank" rel="noopener noreferrer">
                                 Vamos ahora
                                 </a>
                             </div>
