mejoras y logo EarthLove

--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -13,7 +13,7 @@
 <body class="background">
     <style>
         .background{
-            background-image: url('/static/img/fondo1.jpg');
+            background-image: url('/static/img/fondo2.png');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -26,8 +26,7 @@
             <!-- <img src="img/title.png" alt="foto name pag" width="20px"> -->
             <!-- <link rel="stylesheet" href="img/title.png"> -->
             <!-- <div style="background-image:url( 'img/title.png')"></div> -->
-            <a class="navbar-brand" href="/">Earthlove
-            <img src="{% static 'img/arbolito.png' %}" alt="arbolito" height="20px" width="20px">
+            <a class="navbar-brand" href="/"><img src="{% static 'img/earthlove.png' %}" height="50px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
