--- a/homeapp/templates/home.html
+++ b/homeapp/templates/home.html
@@ -15,15 +15,12 @@
         
         <h3>Contexto</h3>
         <p>Actualmente, la raza humana se encuentra en una crisis con el medio ambiente. Se han levantado alertas mundiales sobre el cambio climático y todas sus consecuencias. 
-        Pero lamentablemente esta alerta no llega a ser más que una piedra en el zapato para la sociedad. 
+        Lamentablemente esta alerta no llega a ser más que una piedra en el zapato para la sociedad. 
         La sociedad es un PILAR FUNDAMENTAL en esto, ya que al revertir y ayudar al planeta Tierra, se logrará que la raza humana pueda vivir por mucho más tiempo en este querido planeta. 
         Para esto, una de las posibles soluciones que se plantean es concientizar hacia un comportamiento más amigable con el medio ambiente.
         </p>
 
         <h3>Solución</h3>
-        <img src="{% static 'img/title.jpg' %}" alt="Foto titulo" style="width: 200px;">
-        <br>
-        <div style="background-image:url( 'img/title.jpg' )"></div>
         <p>
             EarthLove es una página web en la que se concientiza dejando al alcance de las personas noticias con información del cambio climático, en la que los propios usuarios pueden hacer
             publicaciones y formar una comunidad. A su vez, pueden visitar lugares repartidos por todo el mundo con una experiencia inmersiva y así sensibilizar sobre cómo la situación afecta a estos sitios.
